--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "dependencies": {
-    "rollup": "^0.58.1",
-    "rollup-plugin-svelte": "^4.1.0",
-    "svelte": "^2.1.1"
+    "glob": "^7.1.3",
+    "rollup": "^1.0.1",
+    "rollup-plugin-svelte": "^5.0.1",
+    "svelte": "^2.16.0"
+  },
+  "scripts": {
+    "build": "rollup -c",
+    "run": "pipenv run gunicorn -w 16 -k gthread streamhelp:app -b 127.0.0.1:55037",
+    "dev": "pipenv run gunicorn -w 4 -k gevent --reload streamhelp:app -b 127.0.0.1:55037"
   }
-  ,"scripts": {"build": "rollup -c", "run": "pipenv run gunicorn -w 8 -k gthread thing:app -b 127.0.0.1:55037"}
 }
