--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "dependencies": {
-    "glob": "^7.1.3",
-    "rollup": "^1.0.1",
-    "rollup-plugin-svelte": "^5.0.1",
-    "svelte": "^2.16.0"
+    "glob": "",
+    "rollup": "",
+    "rollup-plugin-svelte": "",
+    "svelte": "",
+    "concurrently": ""
   },
   "scripts": {
     "build": "rollup -c",
-    "run": "pipenv run gunicorn -w 16 -k gthread streamhelp:app -b 127.0.0.1:55037",
-    "dev": "pipenv run gunicorn -w 4 -k gevent --reload streamhelp:app -b 127.0.0.1:55037"
+    "watch": "rollup -c --watch",
+    "serve": "pipenv run gunicorn -w 4 -k gevent streamhelp:app -b 127.0.0.1:55037",
+    "serve-reload": "pipenv run gunicorn -w 4 -k gevent --reload streamhelp:app -b 127.0.0.1:55037",
+    "dev": "concurrently --kill-others 'npm:watch' 'npm:serve-reload'"
   }
 }
