--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "dependencies": {
+    "concurrently": "",
     "glob": "",
     "rollup": "",
     "rollup-plugin-svelte": "",
-    "svelte": "",
-    "concurrently": ""
+    "svelte": ""
   },
   "scripts": {
     "build": "rollup -c",
